opam-version: "2.0"
name: "flint"
version: "0.0.2"
synopsis: "Simple api over httpaf"
description: "Simple api over httpaf"
maintainer: "Selasie Hanson <soundfever18@gmail.com>"
authors: [ "Selasie Hanson <soundfever18@gmail.com>"]
license: "MIT"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {build}
  "core" {= "v0.13.0"}
  "httpaf"
  "httpaf-lwt-unix"
  "lwt"
  "lwt_ppx"
  "fmt"
  "logs"
  "alcotest"
]
